k8s-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: idrisadisa/nodejs-app:1db1d5db9234976d3b8c64c638dd2f933801d66f
        ports:
        - containerPort: 5000
